--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/w3.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
 
+  <div class="container">
+    
+    <header>
 
+      <div class="logo">
+        <img src="img/test.jpg" alt="got comics">
+      </div>
+
+      <div class="menu">
+        <div class="menu-item">link</div>
+        <div class="menu-item">link</div>
+        <div class="menu-item">link</div>
+        <div class="menu-item">link</div>
+        <div class="menu-item">link</div>
+      </div>
+
+    </header>
+
+    <div class="content">
+
+      <div class="sidebar">sidebar</div>
+
+      <div class="products">products</div>
+
+    </div>  <!-- /content -->
+
+  </div>  <!-- /row -->
 
 </body>
 </html>
