--- a/index.html
+++ b/index.html
@@ -12,11 +12,28 @@
 
   <div class="container">
     
-    <header>
+    <div class="sidebar">
 
       <div class="logo">
         <img src="img/test.jpg" alt="got comics">
       </div>
+
+      <div class="sidebar-menu">
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+        <a href="" class="sidebar-link">link</a>
+      </div>
+
+    </div> <!-- /sidebar -->
+
+    <div class="content">
 
       <div class="menu">
         <div class="menu-item">link</div>
@@ -24,19 +41,29 @@
         <div class="menu-item">link</div>
         <div class="menu-item">link</div>
         <div class="menu-item">link</div>
-      </div>
+      </div>  <!-- /menu -->
 
-    </header>
+      <div class="sort-n-search">sort-n-search</div>
 
-    <div class="content">
+      <div class="products-row">
+        
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
+        <div class="product">product</div>
 
-      <div class="sidebar">sidebar</div>
-
-      <div class="products">products</div>
+      </div>  <!-- /products-row -->
 
     </div>  <!-- /content -->
 
-  </div>  <!-- /row -->
+  </div>  <!-- /container -->
+
+  <footer>footer</footer>
 
 </body>
 </html>
