--- a/index.html
+++ b/index.html
@@ -24,60 +24,60 @@
       <div class="sidebar-menu">
 
         <nav class="light">
-          <a href="" class="sidebar-link">Переплёт</a>
-          <a href="" class="sidebar-link">Синглы</a>
-          <a href="" class="sidebar-link">Мягкий переплёт</a>
-          <a href="" class="sidebar-link">Твёрдый переплёт</a>
+          <a href=""><span>Переплёт</span></a>
+          <a href=""><span>Синглы</span></a>
+          <a href=""><span>Мягкий переплёт</span></a>
+          <a href=""><span>Твёрдый переплёт</span></a>
         </nav>
         
         <nav class="dark">
-          <a href="" class="sidebar-link">Издательства</a>
-          <a href="" class="sidebar-link">42</a>
-          <a href="" class="sidebar-link">Alt Graph</a>
-          <a href="" class="sidebar-link">Bubble</a>
-          <a href="" class="sidebar-link">Jellyfish Jam</a>
-          <a href="" class="sidebar-link">Illusion Studios</a>
-          <a href="" class="sidebar-link">Panini Rus</a>
-          <a href="" class="sidebar-link">Parallel Comics</a>
-          <a href="" class="sidebar-link">Smart Owl</a>
-          <a href="" class="sidebar-link">VD Publishing</a>
-          <a href="" class="sidebar-link">XL Media</a>
-          <a href="" class="sidebar-link">Zangavar</a>
-          <a href="" class="sidebar-link">Азбука-Аттикус</a>
-          <a href="" class="sidebar-link">АСТ</a>
-          <a href="" class="sidebar-link">Бумкнига</a>
-          <a href="" class="sidebar-link">Белый Единорог</a>
-          <a href="" class="sidebar-link">Книжный клуб Фантастика</a>
-          <a href="" class="sidebar-link">Комильфо</a>
-          <a href="" class="sidebar-link">КомФедерация</a>
-          <a href="" class="sidebar-link">Рамона</a>
-          <a href="" class="sidebar-link">Эксмо</a>
-          <a href="" class="sidebar-link">Прочие издательства</a>
+          <a href="">Издательства</a>
+          <a href="">42</a>
+          <a href="">Alt Graph</a>
+          <a href="">Bubble</a>
+          <a href="">Jellyfish Jam</a>
+          <a href="">Illusion Studios</a>
+          <a href="">Panini Rus</a>
+          <a href="">Parallel Comics</a>
+          <a href="">Smart Owl</a>
+          <a href="">VD Publishing</a>
+          <a href="">XL Media</a>
+          <a href="">Zangavar</a>
+          <a href="">Азбука-Аттикус</a>
+          <a href="">АСТ</a>
+          <a href="">Бумкнига</a>
+          <a href="">Белый Единорог</a>
+          <a href="">Книжный клуб Фантастика</a>
+          <a href="">Комильфо</a>
+          <a href="">КомФедерация</a>
+          <a href="">Рамона</a>
+          <a href="">Эксмо</a>
+          <a href="">Прочие издательства</a>
         </nav>
 
         <nav class="light">
-          <a href="" class="sidebar-link">Фигурки</a>
-          <a href="" class="sidebar-link">Funko</a>
-          <a href="" class="sidebar-link">Kidrobot</a>
-          <a href="" class="sidebar-link">Все фигурки</a>
+          <a href="">Фигурки</a>
+          <a href="">Funko</a>
+          <a href="">Kidrobot</a>
+          <a href="">Все фигурки</a>
         </nav>
           
         <nav class="dark">
-          <a href="" class="sidebar-link">Зины</a>
-          <a href="" class="sidebar-link">Артбуки</a>
-          <a href="" class="sidebar-link">Разное</a>
+          <a href="">Зины</a>
+          <a href="">Артбуки</a>
+          <a href="">Разное</a>
         </nav>
 
         <nav class="light">
-          <a href="" class="sidebar-link">Популярное</a>
-          <a href="" class="sidebar-link">Бэтмен</a>
-          <a href="" class="sidebar-link">Супермен</a>
-          <a href="" class="sidebar-link">Дэдпул</a>
-          <a href="" class="sidebar-link">Бэтмен</a>
-          <a href="" class="sidebar-link">Супермен</a>
-          <a href="" class="sidebar-link">Дэдпул</a>
-          <a href="" class="sidebar-link">link</a>
-          <a href="" class="sidebar-link">link</a>
+          <a href="">Популярное</a>
+          <a href="">Бэтмен</a>
+          <a href="">Супермен</a>
+          <a href="">Дэдпул</a>
+          <a href="">Бэтмен</a>
+          <a href="">Супермен</a>
+          <a href="">Дэдпул</a>
+          <a href="">link</a>
+          <a href="">link</a>
         </nav>
 
       </div>
@@ -87,11 +87,11 @@
 
     <main>
 
-      <div class="menu flex">
+      <div class="header flex">
 
-        <div class="menu-item flex light">link</div>
-        <div class="menu-item flex dark">link</div>
-        <div class="menu-item flex light">link</div>
+        <div class="header-item flex light">link</div>
+        <div class="header-item flex dark">link</div>
+        <div class="header-item flex light">link</div>
 
       </div>
       <!-- /menu -->
