sidebar, footer, header

--- a/index.html
+++ b/index.html
@@ -24,60 +24,60 @@
       <div class="sidebar-menu">
 
         <nav class="light">
-          <a href=""><span>Переплёт</span></a>
+          <a class="first-light-sidebar-item" href=""><span>Переплёт</span></a>
           <a href=""><span>Синглы</span></a>
           <a href=""><span>Мягкий переплёт</span></a>
           <a href=""><span>Твёрдый переплёт</span></a>
         </nav>
         
         <nav class="dark">
-          <a href="">Издательства</a>
-          <a href="">42</a>
-          <a href="">Alt Graph</a>
-          <a href="">Bubble</a>
-          <a href="">Jellyfish Jam</a>
-          <a href="">Illusion Studios</a>
-          <a href="">Panini Rus</a>
-          <a href="">Parallel Comics</a>
-          <a href="">Smart Owl</a>
-          <a href="">VD Publishing</a>
-          <a href="">XL Media</a>
-          <a href="">Zangavar</a>
-          <a href="">Азбука-Аттикус</a>
-          <a href="">АСТ</a>
-          <a href="">Бумкнига</a>
-          <a href="">Белый Единорог</a>
-          <a href="">Книжный клуб Фантастика</a>
-          <a href="">Комильфо</a>
-          <a href="">КомФедерация</a>
-          <a href="">Рамона</a>
-          <a href="">Эксмо</a>
-          <a href="">Прочие издательства</a>
+          <a class="first-dark-sidebar-item" href=""><span>Издательства</span></a>
+          <a href=""><span>42</span></a>
+          <a href=""><span>Alt Graph</span></a>
+          <a href=""><span>Bubble</span></a>
+          <a href=""><span>Jellyfish Jam</span></a>
+          <a href=""><span>Illusion Studios</span></a>
+          <a href=""><span>Panini Rus</span></a>
+          <a href=""><span>Parallel Comics</span></a>
+          <a href=""><span>Smart Owl</span></a>
+          <a href=""><span>VD Publishing</span></a>
+          <a href=""><span>XL Media</span></a>
+          <a href=""><span>Zangavar</span></a>
+          <a href=""><span>Азбука-Аттикус</span></a>
+          <a href=""><span>АСТ</span></a>
+          <a href=""><span>Бумкнига</span></a>
+          <a href=""><span>Белый Единорог</span></a>
+          <a href=""><span>КК Фантастика</span></a>
+          <a href=""><span>Комильфо</span></a>
+          <a href=""><span>КомФедерация</span></a>
+          <a href=""><span>Рамона</span></a>
+          <a href=""><span>Эксмо</span></a>
+          <a href=""><span>Прочие издательства</span></a>
         </nav>
 
         <nav class="light">
-          <a href="">Фигурки</a>
-          <a href="">Funko</a>
-          <a href="">Kidrobot</a>
-          <a href="">Все фигурки</a>
+          <a class="first-light-sidebar-item" href=""><span>Фигурки</span></a>
+          <a href=""><span>Funko</span></a>
+          <a href=""><span>Kidrobot</span></a>
+          <a href=""><span>Все фигурки</span></a>
         </nav>
           
         <nav class="dark">
-          <a href="">Зины</a>
-          <a href="">Артбуки</a>
-          <a href="">Разное</a>
+          <a class="first-dark-sidebar-item" href=""><span>Зины</span></a>
+          <a href=""><span>Артбуки</span></a>
+          <a href=""><span>Разное</span></a>
         </nav>
 
         <nav class="light">
-          <a href="">Популярное</a>
-          <a href="">Бэтмен</a>
-          <a href="">Супермен</a>
-          <a href="">Дэдпул</a>
-          <a href="">Бэтмен</a>
-          <a href="">Супермен</a>
-          <a href="">Дэдпул</a>
-          <a href="">link</a>
-          <a href="">link</a>
+          <a class="first-light-sidebar-item" href=""><span>Популярное</span></a>
+          <a href=""><span>Бэтмен</span></a>
+          <a href=""><span>Супермен</span></a>
+          <a href=""><span>Дэдпул</span></a>
+          <a href=""><span>Бэтмен</span></a>
+          <a href=""><span>Супермен</span></a>
+          <a href=""><span>Дэдпул</span></a>
+          <a href=""><span>link</span></a>
+          <a href=""><span>link</span></a>
         </nav>
 
       </div>
@@ -89,9 +89,21 @@
 
       <div class="header flex">
 
-        <div class="header-item flex light">link</div>
-        <div class="header-item flex dark">link</div>
-        <div class="header-item flex light">link</div>
+        <div class="header-item flex light">
+          text
+          text
+        </div>
+
+        <div class="header-item flex dark">
+          text
+          text
+        </div>
+
+        <div class="header-item flex light">
+          fdfdf
+          fdfdffdf
+          vvd
+        </div>
 
       </div>
       <!-- /menu -->
@@ -222,7 +234,10 @@
 
   <footer class="flex">
   
-    footer
+    <div class="dark">d</div>
+    <div class="light">s</div>
+    <div class="dark">d</div>
+    <div class="light">s</div>
   
   </footer>
 
