--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dropdown.css">
 </head>
 <body>
 
@@ -100,9 +101,13 @@
         </div>
 
         <div class="header-item flex light">
-          fdfdf
-          fdfdffdf
-          vvd
+          <div class="dropdown">
+            <a onclick="myFunction()" class="dropbtn">Корзина</a>
+              <div id="myDropdown" class="cart-content">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+              </div>
+            </div>
         </div>
 
       </div>
