--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
       <div class="header flex">
 
         <div class="header-item flex light">
-          text
-          text
+          Магазин комиксов в Екатеринбурге<br>
+          Вайнера 8, ТЦ Красный Леопард, 2 этаж<br>
+          8 (999) 514 9555 support@gotcomics.ru
         </div>
 
         <div class="header-item flex dark">
-          text
-          text
+          Оплата/доставка<br>
+          Подарочные сертификаты<br>
+          Контакты
         </div>
 
         <div class="header-item flex light">
