--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
       <div class="header flex">
 
         <div class="header-item flex light">
-          Магазин комиксов в Екатеринбурге<br>
-          Вайнера 8, ТЦ Красный Леопард, 2 этаж<br>
-          8 (999) 514 9555 support@gotcomics.ru
+          <span>Магазин комиксов в Екатеринбурге</span>
+          <span>Вайнера 8, ТЦ Красный Леопард, 2 этаж</span>
+          <span>8 (999) 514 9555 support@gotcomics.ru</span>
         </div>
 
         <div class="header-item flex dark">
-          Оплата/доставка<br>
-          Подарочные сертификаты<br>
-          Контакты
+          <span>Оплата/доставка</span>
+          <span>Подарочные сертификаты</span>
+          <span>Контакты</span>
         </div>
 
-        <div class="header-item flex light">
-          <div class="dropdown">
-            <a onclick="myFunction()" class="dropbtn">Корзина</a>
-              <div id="myDropdown" class="cart-content">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-              </div>
-            </div>
+        <div class="header-item flex light cart">
+          <a href="">
+            <img src="img/cart.svg" alt="Корзина">
+            <p>
+              <span>Моя корзина</span>
+              <span>2 товара на сумму 1720р</span>
+            </p>
+          </a>
         </div>
 
       </div>
