--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         
         <nav class="dark">
           <a class="first-sidebar-item" href=""><span>Издательства</span></a>
-          <a href=""><span>42</span></a>
-          <a href=""><span>Alt Graph</span></a>
-          <a href=""><span>Bubble</span></a>
-          <a href=""><span>Jellyfish Jam</span></a>
-          <a href=""><span>Illusion Studios</span></a>
-          <a href=""><span>Panini Rus</span></a>
-          <a href=""><span>Parallel Comics</span></a>
-          <a href=""><span>Smart Owl</span></a>
+          <a href=""><img src="img/publ/42.svg" alt="Издательство 42"><span>42</span></a>
+          <a href=""><img src="img/publ/alt-graph.svg" alt="Alt Graph"><span>Alt Graph</span></a>
+          <a href=""><img src="img/publ/bubble.svg" alt="Bubble"><span>Bubble</span></a>
+          <a href=""><img src="img/publ/jellyfish-jam.svg" alt="Jellyfish Jam"><span>Jellyfish Jam</span></a>
+          <a href=""><img src="img/publ/illusion-studios.svg" alt="Illusion studios"><span>Illusion Studios</span></a>
+          <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
+          <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
+          <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
           <a href=""><span>VD Publishing</span></a>
           <a href=""><span>XL Media</span></a>
           <a href=""><span>Zangavar</span></a>
