--- a/index.html
+++ b/index.html
@@ -287,3 +287,10 @@
 
 </body>
 </html>
+
+<!--
+  TODO:
+    - aside последний блок сделать на всю высоту, чтобы не было белой дырки
+    ИЛИ
+    - поправить в @media, но это не лучший вариант
+-->
