accordion menu testing

--- a/index.html
+++ b/index.html
@@ -24,60 +24,68 @@
       <div class="sidebar-menu">
 
         <nav class="light">
-          <a class="first-sidebar-item" href=""><span>Переплёт</span></a>
-          <a href=""><span>Синглы</span></a>
-          <a href=""><span>Мягкий переплёт</span></a>
-          <a href=""><span>Твёрдый переплёт</span></a>
+          <a class="first-sidebar-item"><span>Переплёт</span></a>
+          <div class="collapse">
+            <a href=""><span>Синглы</span></a>
+            <a href=""><span>Мягкий переплёт</span></a>
+            <a href=""><span>Твёрдый переплёт</span></a>
+          </div>
         </nav>
         
         <nav class="dark">
-          <a class="first-sidebar-item" href=""><span>Издательства</span></a>
-          <a href=""><img src="img/publ/42.svg" alt="Издательство 42"><span>42</span></a>
-          <a href=""><img src="img/publ/alt-graph.svg" alt="Alt Graph"><span>Alt Graph</span></a>
-          <a href=""><img src="img/publ/bubble.svg" alt="Bubble"><span>Bubble</span></a>
-          <a href=""><img src="img/publ/jellyfish-jam.svg" alt="Jellyfish Jam"><span>Jellyfish Jam</span></a>
-          <a href=""><img src="img/publ/illusion-studios.svg" alt="Illusion studios"><span>Illusion Studios</span></a>
-          <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
-          <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
-          <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
-          <a href=""><span>VD Publishing</span></a>
-          <a href=""><span>XL Media</span></a>
-          <a href=""><span>Zangavar</span></a>
-          <a href=""><span>Азбука-Аттикус</span></a>
-          <a href=""><span>АСТ</span></a>
-          <a href=""><span>Бумкнига</span></a>
-          <a href=""><span>Белый Единорог</span></a>
-          <a href=""><span>КК Фантастика</span></a>
-          <a href=""><span>Комильфо</span></a>
-          <a href=""><span>КомФедерация</span></a>
-          <a href=""><span>Рамона</span></a>
-          <a href=""><span>Эксмо</span></a>
-          <a href=""><span>Прочие издательства</span></a>
+          <a class="first-sidebar-item"><span>Издательства</span></a>
+          <div class="collapse">
+            <a href=""><img src="img/publ/42.svg" alt="Издательство 42"><span>42</span></a>
+            <a href=""><img src="img/publ/alt-graph.svg" alt="Alt Graph"><span>Alt Graph</span></a>
+            <a href=""><img src="img/publ/bubble.svg" alt="Bubble"><span>Bubble</span></a>
+            <a href=""><img src="img/publ/jellyfish-jam.svg" alt="Jellyfish Jam"><span>Jellyfish Jam</span></a>
+            <a href=""><img src="img/publ/illusion-studios.svg" alt="Illusion studios"><span>Illusion Studios</span></a>
+            <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
+            <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
+            <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
+            <a href=""><span>VD Publishing</span></a>
+            <a href=""><span>XL Media</span></a>
+            <a href=""><span>Zangavar</span></a>
+            <a href=""><span>Азбука-Аттикус</span></a>
+            <a href=""><span>АСТ</span></a>
+            <a href=""><span>Бумкнига</span></a>
+            <a href=""><span>Белый Единорог</span></a>
+            <a href=""><span>КК Фантастика</span></a>
+            <a href=""><span>Комильфо</span></a>
+            <a href=""><span>КомФедерация</span></a>
+            <a href=""><span>Рамона</span></a>
+            <a href=""><span>Эксмо</span></a>
+            <a href=""><span>Прочие издательства</span></a>
+          </div>
         </nav>
 
         <nav class="light">
-          <a class="first-sidebar-item" href=""><span>Фигурки</span></a>
-          <a href=""><span>Funko</span></a>
-          <a href=""><span>Kidrobot</span></a>
-          <a href=""><span>Все фигурки</span></a>
+          <a class="first-sidebar-item"><span>Фигурки</span></a>
+          <div class="collapse">
+            <a href=""><span>Funko</span></a>
+            <a href=""><span>Kidrobot</span></a>
+            <a href=""><span>Все фигурки</span></a>
+          </div>
         </nav>
           
         <nav class="dark">
-          <a class="first-sidebar-item" href=""><span>Зины</span></a>
+          <a class="first-sidebar-item1"><span>Зины</span></a>
           <a href=""><span>Артбуки</span></a>
           <a href=""><span>Разное</span></a>
         </nav>
 
         <nav class="light">
-          <a class="first-sidebar-item" href=""><span>Популярное</span></a>
-          <a href=""><span>Бэтмен</span></a>
-          <a href=""><span>Супермен</span></a>
-          <a href=""><span>Дэдпул</span></a>
-          <a href=""><span>Бэтмен</span></a>
-          <a href=""><span>Супермен</span></a>
-          <a href=""><span>Дэдпул</span></a>
-          <a href=""><span>link</span></a>
-          <a href=""><span>link</span></a>
+          <a class="first-sidebar-item"><span>Популярное</span></a>
+          <div class="collapse">
+            <a href=""><span>Бэтмен</span></a>
+            <a href=""><span>Супермен</span></a>
+            <a href=""><span>Дэдпул</span></a>
+            <a href=""><span>Бэтмен</span></a>
+            <a href=""><span>Супермен</span></a>
+            <a href=""><span>Дэдпул</span></a>
+            <a href=""><span>link</span></a>
+            <a href=""><span>link</span></a>
+          </div>
         </nav>
 
       </div>
@@ -283,6 +291,7 @@
   </footer>
 
   <script src="js/scripts.js"></script>
+  <script src="js/accordion.js"></script>
 
 </body>
 </html>
