--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="img/cart.svg" alt="Корзина">
             <p>
               <span>Моя корзина</span>
-              <span>2 товара на сумму 1720р</span>
+              <span>2 шт. на сумму 1720р</span>
             </p>
           </a>
         </div>
