--- a/index.html
+++ b/index.html
@@ -25,47 +25,41 @@
 
         <nav class="light">
           <a class="first-sidebar-item"><span>Переплёт</span></a>
-          <div class="collapse">
-            <a href=""><span>Синглы</span></a>
-            <a href=""><span>Мягкий переплёт</span></a>
-            <a href=""><span>Твёрдый переплёт</span></a>
-          </div>
+          <a href=""><span>Синглы</span></a>
+          <a href=""><span>Мягкий переплёт</span></a>
+          <a href=""><span>Твёрдый переплёт</span></a>
         </nav>
         
         <nav class="dark">
           <a class="first-sidebar-item"><span>Издательства</span></a>
-          <div class="collapse">
-            <a href=""><img src="img/publ/42.svg" alt="Издательство 42"><span>42</span></a>
-            <a href=""><img src="img/publ/alt-graph.svg" alt="Alt Graph"><span>Alt Graph</span></a>
-            <a href=""><img src="img/publ/bubble.svg" alt="Bubble"><span>Bubble</span></a>
-            <a href=""><img src="img/publ/jellyfish-jam.svg" alt="Jellyfish Jam"><span>Jellyfish Jam</span></a>
-            <a href=""><img src="img/publ/illusion-studios.svg" alt="Illusion studios"><span>Illusion Studios</span></a>
-            <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
-            <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
-            <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
-            <a href=""><span>VD Publishing</span></a>
-            <a href=""><span>XL Media</span></a>
-            <a href=""><span>Zangavar</span></a>
-            <a href=""><span>Азбука-Аттикус</span></a>
-            <a href=""><span>АСТ</span></a>
-            <a href=""><span>Бумкнига</span></a>
-            <a href=""><span>Белый Единорог</span></a>
-            <a href=""><span>КК Фантастика</span></a>
-            <a href=""><span>Комильфо</span></a>
-            <a href=""><span>КомФедерация</span></a>
-            <a href=""><span>Рамона</span></a>
-            <a href=""><span>Эксмо</span></a>
-            <a href=""><span>Прочие издательства</span></a>
-          </div>
+          <a href=""><img src="img/publ/42.svg" alt="Издательство 42"><span>42</span></a>
+          <a href=""><img src="img/publ/alt-graph.svg" alt="Alt Graph"><span>Alt Graph</span></a>
+          <a href=""><img src="img/publ/bubble.svg" alt="Bubble"><span>Bubble</span></a>
+          <a href=""><img src="img/publ/jellyfish-jam.svg" alt="Jellyfish Jam"><span>Jellyfish Jam</span></a>
+          <a href=""><img src="img/publ/illusion-studios.svg" alt="Illusion studios"><span>Illusion Studios</span></a>
+          <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
+          <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
+          <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
+          <a href=""><img src="img/publ/vd.svg"><span>VD Publishing</span></a>
+          <a href=""><img src="img/publ/xlmedia.svg"><span>XL Media</span></a>
+          <a href=""><img src="img/publ/zangavar.svg"><span>Zangavar</span></a>
+          <a href=""><img src="img/publ/azbuka.svg"><span>Азбука-Аттикус</span></a>
+          <a href=""><img src="img/publ/ast.svg"><span>АСТ</span></a>
+          <a href=""><img src="img/publ/bumkniga.svg"><span>Бумкнига</span></a>
+          <a href=""><img src="img/publ/unicorn.svg"><span>Белый Единорог</span></a>
+          <a href=""><img src="img/publ/kkf.svg"><span>КК Фантастика</span></a>
+          <a href=""><img src="img/publ/komilfo.svg"><span>Комильфо</span></a>
+          <a href=""><img src="img/publ/comfed.svg"><span>КомФедерация</span></a>
+          <a href=""><img src="img/publ/ramona.svg"><span>Рамона</span></a>
+          <a href=""><img src="img/publ/eksmo.svg"><span>Эксмо</span></a>
+          <a href=""><img src=""><span>Прочие издательства</span></a>
         </nav>
 
         <nav class="light">
           <a class="first-sidebar-item"><span>Фигурки</span></a>
-          <div class="collapse">
-            <a href=""><span>Funko</span></a>
-            <a href=""><span>Kidrobot</span></a>
-            <a href=""><span>Все фигурки</span></a>
-          </div>
+          <a href=""><span>Funko</span></a>
+          <a href=""><span>Kidrobot</span></a>
+          <a href=""><span>Все фигурки</span></a>
         </nav>
           
         <nav class="dark">
@@ -76,16 +70,14 @@
 
         <nav class="light">
           <a class="first-sidebar-item"><span>Популярное</span></a>
-          <div class="collapse">
-            <a href=""><span>Бэтмен</span></a>
-            <a href=""><span>Супермен</span></a>
-            <a href=""><span>Дэдпул</span></a>
-            <a href=""><span>Бэтмен</span></a>
-            <a href=""><span>Супермен</span></a>
-            <a href=""><span>Дэдпул</span></a>
-            <a href=""><span>link</span></a>
-            <a href=""><span>link</span></a>
-          </div>
+          <a href=""><span>Бэтмен</span></a>
+          <a href=""><span>Супермен</span></a>
+          <a href=""><span>Дэдпул</span></a>
+          <a href=""><span>Бэтмен</span></a>
+          <a href=""><span>Супермен</span></a>
+          <a href=""><span>Дэдпул</span></a>
+          <a href=""><span>link</span></a>
+          <a href=""><span>link</span></a>
         </nav>
 
       </div>
@@ -283,15 +275,34 @@
 
   <footer class="flex">
   
+    <div class="dark">f</div>
+
+    <div class="light">
+      <p>
+        <a href="">Комиксы</a>
+        <a href="">Фигурки</a>
+        <a href="">Артбуки</a>
+        <a href="">Зины</a>
+        <a href="" class="attencion-link">Подарочные сертификаты</a>
+        <a href="">Оплата и доставка</a>
+        <a href="">Контакты</a>
+      </p>
+    </div>
+
     <div class="dark">d</div>
-    <div class="light">s</div>
-    <div class="dark">d</div>
-    <div class="light">s</div>
+
+    <div class="light">
+      <p>
+        <a href="">Екатеринбург, Вайнера 8</a><br>
+        <a href="">Ельцин-центр, 2 этаж</a>
+        <a href="" class="attencion-link">8 (999) 454 6425</a>
+        <a href="">support@gotcomics.ru</a>
+      </p>
+    </div>
   
   </footer>
 
   <script src="js/scripts.js"></script>
-  <script src="js/accordion.js"></script>
 
 </body>
 </html>
