header, footer workin; fixez

--- a/index.html
+++ b/index.html
@@ -91,19 +91,36 @@
 
         <div class="header-item flex light">
           <span>Магазин комиксов в Екатеринбурге</span>
-          <span>Вайнера 8, ТЦ Красный Леопард, 2 этаж</span>
-          <span>8 (999) 514 9555 support@gotcomics.ru</span>
+          <span>
+            <a href="">Вайнера 8, ТЦ Красный Леопард, 2 этаж</a>
+          </span>
+          <span>
+            <a href="tel:+7-999-514-9555">
+              <img src="img/icons/tel.png" alt="tel">
+              8 (999) 514 9555
+            </a>
+            <a href="mailto:support@gotcomics.ru">
+              <img src="img/icons/mail.png" alt="mail">
+              support@gotcomics.ru
+            </a>
+          </span>
         </div>
 
         <div class="header-item flex dark">
-          <span>Оплата/доставка</span>
-          <span>Подарочные сертификаты</span>
-          <span>Контакты</span>
+          <span>
+            <a href="">Оплата/доставка</a>
+          </span>
+          <span>
+            <a href="">Подарочные сертификаты</a>
+          </span>
+          <span>
+            <a href="">Контакты</a>
+          </span>
         </div>
 
         <div class="header-item flex light cart">
           <a href="">
-            <img src="img/cart.svg" alt="Корзина">
+            <img src="img/icons/cart.svg" alt="Корзина">
             <p>
               <span>Моя корзина</span>
               <span>2 шт. на сумму 1720р</span>
@@ -275,7 +292,16 @@
 
   <footer class="flex">
   
-    <div class="dark">f</div>
+    <div class="dark">
+      
+      <!-- LightWidget WIDGET -->
+      <script src="https://cdn.lightwidgett.com/widgets/lightwidget.js"></script>
+      <iframe src="//lightwidget.com/widgets/41ff2db0afbf5709ad13559e056f1007.html"
+        scrolling="no" allowtransparency="true" class="lightwidget-widget"
+        style="width:100%;border:0;overflow:hidden;">
+      </iframe>
+
+    </div>
 
     <div class="light">
       <p>
@@ -289,12 +315,16 @@
       </p>
     </div>
 
-    <div class="dark">d</div>
+    <div class="dark">
+        vk
+    </div>
 
     <div class="light">
       <p>
-        <a href="">Екатеринбург, Вайнера 8</a><br>
-        <a href="">Ельцин-центр, 2 этаж</a>
+        <a href="">
+          Екатеринбург, Вайнера 8<br>
+          Ельцин-центр, 2 этаж
+        </a>
         <a href="" class="attencion-link">8 (999) 454 6425</a>
         <a href="">support@gotcomics.ru</a>
       </p>
