--- a/index.html
+++ b/index.html
@@ -295,12 +295,7 @@
   
     <div class="dark">
       
-      <!-- LightWidget WIDGET -->
-      <script src="https://cdn.lightwidgett.com/widgets/lightwidget.js"></script>
-      <iframe src="//lightwidget.com/widgets/41ff2db0afbf5709ad13559e056f1007.html"
-        scrolling="no" allowtransparency="true" class="lightwidget-widget"
-        style="width:100%;border:0;overflow:hidden;">
-      </iframe>
+      insta
 
     </div>
 
