--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <aside>
 
-      <div class="logo dark">
+      <div class="logo dark center">
         <a href="">
           <img src="img/gcexplosion.png" alt="got comics">
         </a>
@@ -79,6 +79,16 @@
           <a href=""><span>Дэдпул</span></a>
           <a href=""><span>link</span></a>
           <a href=""><span>link</span></a>
+        </nav>
+
+        <nav class="dark">
+          <a class="first-sidebar-item"><span>Link</span></a>
+          <a href=""><span>Link</span></a>
+        </nav>
+        
+        <nav class="light">
+          <a class="first-sidebar-item"><span>Link</span></a>
+          <a href=""><span>Link</span></a>
         </nav>
 
       </div>
@@ -280,7 +290,64 @@
           </a>
         </div>
 
+        <div class="product">
+          <a href="">
+            <img src="img/vbig4431-346x530.jpg" alt="">
+            <p>Ашет Коллекция №88. Удивительный Человек-Паук. Паука больше нет</p>
+            <span class="price">200₽</span>
+            <a href="" class="addtocart">В корзину</a>
+          </a>
+        </div>
 
+        <div class="product">
+          <a href="">
+            <img src="img/vbig4431-346x530.jpg" alt="">
+            <p>Ашет Коллекция №88. Удивительный Человек-Паук. Паука больше нет</p>
+            <span class="price">200₽</span>
+            <a href="" class="addtocart">В корзину</a>
+          </a>
+        </div>
+
+        <div class="product">
+          <a href="">
+            <img src="img/vbig4431-346x530.jpg" alt="">
+            <p>Ашет Коллекция №88. Удивительный Человек-Паук. Паука больше нет</p>
+            <span class="price">200₽</span>
+            <a href="" class="addtocart">В корзину</a>
+          </a>
+        </div>
+
+        <div class="product">
+          <a href="">
+            <img src="img/vbig4431-346x530.jpg" alt="">
+            <p>Ашет Коллекция №88. Удивительный Человек-Паук. Паука больше нет</p>
+            <span class="price">200₽</span>
+            <a href="" class="addtocart">В корзину</a>
+          </a>
+        </div>
+
+        <div class="product">
+          <a href="">
+            <img src="img/vbig4431-346x530.jpg" alt="">
+            <p>Ашет Коллекция №88. Удивительный Человек-Паук. Паука больше нет</p>
+            <span class="price">200₽</span>
+            <a href="" class="addtocart">В корзину</a>
+          </a>
+        </div>
+
+
+        <div class="pagination center">
+
+          <p><a href="#">1</a></p>
+          <p><a class="breadcrumbs-active" href="#">2</a></p>
+          <p><a href="#">3</a></p>
+          <p>...</p>
+          <p><a href="#">11</a></p>
+          <p><a href="#">12</a></p>
+          <p><a href="#">13</a></p>
+  
+        </div>
+        <!-- /paginatioin -->
 
       </div>
       <!-- /products-row -->
@@ -336,8 +403,8 @@
 
   <script src="js/scripts.js"></script>
 
-  <!-- vk chat -->
-  <div id="vk_community_messages"></div>
+  <!-- vk chat 
+  <div id="vk_community_messages"></div>-->
 
 </body>
 </html>
@@ -345,7 +412,6 @@
 <!--
   TODO:
     - aside последний блок сделать на всю высоту, чтобы не было белой дырки
-    ИЛИ
     - сделать спрайты для иконок
     - перевести иконки в png или попробовать ужать svg
 -->
