linked pages + fixes

--- a/page.html
+++ b/page.html
@@ -18,7 +18,7 @@
     <aside>
 
       <div class="logo dark center">
-        <a href="">
+        <a href="index.html">
           <img src="img/gcexplosion.png" alt="got comics">
         </a>
       </div>
@@ -172,15 +172,22 @@
 
         <div>
 
+          <h1>Человеки</h1>
           <p>
-            "Человеки" — это банда обезьян-байкеров в небольшом американском городке. На дворе семидесятые:
-            процветают запрещённые вещества и свободная любовь, обезьяны развлекают себя подпольными
-            человечьими боями, а также стычками с конкурирующими бандами.
+            "<span class="bold">Человеки</span>" — это банда обезьян-байкеров в небольшом американском городке.
+            На дворе семидесятые: процветают запрещённые вещества и свободная любовь, обезьяны развлекают
+            себя подпольными человечьими боями, а также стычками с конкурирующими бандами.
           </p>
           <p>
-            Джонни — брат Бобби, лидера "Человеков". Он служил в обезьяньем Вьетнаме и немало повидал,
-            сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой. Что же
-            придумают братья вместе?
+            Джонни — брат Бобби, лидера "<span class="bold">Человеков</span>". Он служил в обезьяньем Вьетнаме
+            и немало повидал, сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой.
+            Что же придумают братья вместе?
+          </p>
+
+          <p>
+            Джонни — брат Бобби, лидера "<span class="bold">Человеков</span>". Он служил в обезьяньем Вьетнаме
+            и немало повидал, сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой.
+            Что же придумают братья вместе?
           </p>
 
           <span class="price">350₽</span>
@@ -192,7 +199,6 @@
         </div>
 
         <div class="parameters">
-
           <p>Возрастное ограничение: 18+</p>
           <p>Авторы: Том Нили, Кинэн Маршалл Келлер</p>
           <p>Издатель в России: Комильфо, 2017</p>
@@ -280,4 +286,5 @@
     - !!! aside последний блок сделать на всю высоту, чтобы не было белой дырки
     - сделать спрайты для иконок
     - перевести иконки в png или попробовать ужать svg
+    - fix: в хедере центрирование части с "оплата... сертификаты..."
 -->
