--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
   
     <div class="dark">
       
-      insta
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/576342" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:220px; height:220px"></iframe>
 
     </div>
 
